# Firmware-Replay-Lab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Instructions.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: adapter-request.md  bug-replay-request.md  community-bundle.md
.github/instructions/: python.instructions.md  schemas.instructions.md  tests.instructions.md  ui.instructions.md
.github/workflows/: ci.yml  replay-regression.yml
examples/esp32/: README.md
examples/generic/: README.md
examples/stm32/: README.md
prompts/antigravity/: add-schema-validator.md  build-dash-ui.md  build-parser.md  create-pytest-plugin.md
prompts/maintenance/: issue-triage.md  release-checklist.md
replay_spec/: assertions-schema.yaml  bundle-schema.yaml
replay_spec/format-examples/: README.md
replays/community/: README.md
replays/sample-bundles/: README.md  boot-loop-stm32.json  hardfault-spi-stm32.json  stack-overflow-esp32.json  watchdog-ble-esp32.json  wifi-timeout-esp32.json
src/firmware_replay_lab/: __init__.py  anonymize.py  bundle.py  capture.py  cli.py  diff.py  directory_loader.py  pytest_plugin.py  replay.py  timestamps.py  ui_launcher.py  validator.py
tests/: test_bundle.py  test_replay.py
tests/integration/: test_benchmark_bundles.py  test_cli.py  test_validate_diff.py
tests/unit/: test_anonymize.py  test_assertions.py  test_diff.py  test_directory_loader.py  test_esp32_adapter.py  test_jtag_adapter.py  test_stm32_adapter.py  test_swd_adapter.py  (+2 more)
ui/: app.py
(+14 files in other folders)
