[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firmware-replay-lab"
version = "0.1.0"
description = "Capture firmware failures once and replay them as regression checks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Firmware Replay Lab" }]
dependencies = []

[project.scripts]
frl = "firmware_replay_lab.cli:main"

[project.entry-points."pytest11"]
firmware_replay = "firmware_replay_lab.pytest_plugin"

[project.optional-dependencies]
ui = [
    "dash>=2.14",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["src"]
